# NoNubeVigil

./: LICENSE  README.md  __init__.py  cli.py  pyproject.toml
analyzers/: dataflow.py
gui/: __init__.py  app.py  state.py
gui/components/: __init__.py  severity_chart.py  status_bar.py
gui/tabs/: __init__.py  detail_tab.py  findings_tab.py  scan_tab.py
ingestion/: parser.py  walker.py
models/: __init__.py  context.py  finding.py
nonubevigil/: pipeline.py
nonubevigil/analyzers/: __init__.py  ast_analyzer.py  pattern.py
nonubevigil/ingestion/: __init__.py  loader.py
nonubevigil/models/: severity.py
nonubevigil/output/: cli_formatter.py  pdf_reporter.py  sarif_exporter.py
nonubevigil/rules/: base.py  sec001_hardcoded_secret.py  sec002_sql_injection.py  sec004_insecure_deserialization.py
output/: __init__.py  cli_formatter.py
rules/: __init__.py  sec003_xss.py
scoring/: __init__.py  confidence.py
src/: api.py  auth.py  views.js
tests/: __init__.py  conftest.py  test_ingestion_loader.py  test_ingestion_parser.py  test_models.py  test_rules_base.py  test_scoring_confidence.py
