[tool.poetry]
package-mode = false

[project]
name = "nonubevigil"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Giacinto",email = "francesco.giacinto@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-python>=0.25",
]


[tool.poetry.extras]
ast = [
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-java",
]

[tool.poetry.group.dev.dependencies]
pytest         = "^8.0"
pytest-cov     = "^5.0"
basedpyright   = "^1.0"
ruff           = "^0.4"

[tool.poetry.scripts]
vigil = ".cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=vigil --cov-report=term-missing"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
