[project]
name = "nonubevigil"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Giacinto", email = "francesco.giacinto@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
customtkinter       = ">=5.2.2,<6.0.0"
matplotlib          = ">=3.10.8,<4.0.0"
pillow              = ">=10.0.0"
tree-sitter         = { version = ">=0.24", optional = true }
tree-sitter-java    = { version = ">=0.23", optional = true }
tree-sitter-javascript = { version = ">=0.25", optional = true }
tree-sitter-python  = { version = ">=0.25", optional = true }

[tool.poetry.extras]
ast = [
    "tree-sitter",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-python",
]

[tool.poetry.group.dev.dependencies]
pytest         = "^8.0"
pytest-cov     = "^5.0"
basedpyright   = "^1.0"
ruff           = "^0.4"

[tool.poetry.scripts]
vigil     = "nonubevigil.cli:main"
vigil-gui = "gui.app:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=nonubevigil --cov-report=term-missing"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry-core.masonry.api"